@@ -1,21 +1,25 @@
 package jp.kusumotolab.kgenprog.project.test;
 
-import static org.hamcrest.MatcherAssert.*;
-import static org.hamcrest.Matchers.*;
-
+import static org.hamcrest.MatcherAssert.assertThat;
+import static org.hamcrest.Matchers.empty;
+import static org.hamcrest.Matchers.hasItems;
+import static org.hamcrest.Matchers.is;
+import static org.hamcrest.Matchers.notNullValue;
+import static org.hamcrest.Matchers.nullValue;
+import static org.hamcrest.Matchers.startsWith;
 import java.lang.ref.WeakReference;
 import java.net.URL;
+import java.nio.file.Path;
+import java.nio.file.Paths;
 import java.util.List;
 import java.util.Vector;
 import java.util.stream.Collectors;
-
+import jp.kusumotolab.kgenprog.project.ProjectBuilder;
+import jp.kusumotolab.kgenprog.project.TargetProject;
 import org.junit.BeforeClass;
 import org.junit.Test;
 import org.junit.runner.JUnitCore;
 import org.junit.runner.Result;
-
-import jp.kusumotolab.kgenprog.project.ProjectBuilder;
-import jp.kusumotolab.kgenprog.project.TargetProject;
 
 /**
  * 
@@ -24,218 +28,221 @@ import jp.kusumotolab.kgenprog.project.TargetProject;
  */
 public class MemoryClassLoaderTest {
 
-	final static String outdir = "example/example01/_bin/";
-	final static String buggyCalculator = "jp.kusumotolab.BuggyCalculator";
-	final static String buggyCalculatorTest = buggyCalculator + "Test";
+  final static Path rootDir = Paths.get("example/example01");
+  final static Path outDir = rootDir.resolve("_bin");
+  final static String buggyCalculator = "jp.kusumotolab.BuggyCalculator";
+  final static String buggyCalculatorTest = buggyCalculator + "Test";
 
-	@BeforeClass
-	public static void beforeClass() {
-		final TargetProject targetProject = TargetProject.generate("example/example01");
-		new ProjectBuilder(targetProject).build(outdir);
-	}
+  @BeforeClass
+  public static void beforeClass() {
+    final TargetProject targetProject = TargetProject.generate(rootDir);
+    new ProjectBuilder(targetProject).build(outDir);
+  }
 
-	@Test
-	public void testDynamicClassLoading01() throws Exception {
-		MemoryClassLoader loader = new MemoryClassLoader(new URL[] { new URL("file:./" + outdir) });
+  @Test
+  public void testDynamicClassLoading01() throws Exception {
+    MemoryClassLoader loader = new MemoryClassLoader(new URL[] {outDir.toUri().toURL()});
 
-		// 動的ロード
-		Class<?> clazz = loader.loadClass(buggyCalculator);
-		Object instance = clazz.newInstance();
+    // 動的ロード
+    Class<?> clazz = loader.loadClass(buggyCalculator);
+    Object instance = clazz.newInstance();
 
-		// きちんと存在するか？その名前は正しいか？
-		assertThat(instance, is(notNullValue()));
-		assertThat(instance.toString(), is(startsWith(buggyCalculator)));
-		assertThat(clazz.getName(), is(buggyCalculator));
+    // きちんと存在するか？その名前は正しいか？
+    assertThat(instance, is(notNullValue()));
+    assertThat(instance.toString(), is(startsWith(buggyCalculator)));
+    assertThat(clazz.getName(), is(buggyCalculator));
 
-		loader.close();
-	}
+    loader.close();
+  }
 
-	@Test(expected = ClassNotFoundException.class)
-	public void testDynamicClassLoading02() throws Exception {
-		MemoryClassLoader loader = new MemoryClassLoader(new URL[] { new URL("file:./" + outdir) });
+  @Test(expected = ClassNotFoundException.class)
+  public void testDynamicClassLoading02() throws Exception {
+    MemoryClassLoader loader = new MemoryClassLoader(new URL[] {outDir.toUri().toURL()});
 
-		// SystemLoaderで動的ロード，失敗するはず (Exceptionを期待)
-		ClassLoader.getSystemClassLoader().loadClass(buggyCalculator);
+    // SystemLoaderで動的ロード，失敗するはず (Exceptionを期待)
+    ClassLoader.getSystemClassLoader().loadClass(buggyCalculator);
 
-		loader.close();
-	}
+    loader.close();
+  }
 
-	@Test(expected = ClassNotFoundException.class)
-	public void testDynamicClassLoading03() throws Exception {
-		MemoryClassLoader loader = new MemoryClassLoader(new URL[] { new URL("file:./" + outdir) });
+  @Test(expected = ClassNotFoundException.class)
+  public void testDynamicClassLoading03() throws Exception {
+    MemoryClassLoader loader = new MemoryClassLoader(new URL[] {outDir.toUri().toURL()});
 
-		// リフレクションで動的ロード，失敗するはず (Exceptionを期待)
-		// 処理自体は02と等価なはず
-		Class.forName(buggyCalculator);
+    // リフレクションで動的ロード，失敗するはず (Exceptionを期待)
+    // 処理自体は02と等価なはず
+    Class.forName(buggyCalculator);
 
-		loader.close();
-	}
+    loader.close();
+  }
 
-	@Test
-	public void testDynamicClassLoading04() throws Exception {
-		MemoryClassLoader loader = new MemoryClassLoader(new URL[] { new URL("file:./" + outdir) });
+  @Test
+  public void testDynamicClassLoading04() throws Exception {
+    MemoryClassLoader loader = new MemoryClassLoader(new URL[] {outDir.toUri().toURL()});
 
-		// リフレクション + MemoryLoaderで動的ロード，これは成功するはず
-		Class<?> clazz = Class.forName(buggyCalculator, true, loader);
+    // リフレクション + MemoryLoaderで動的ロード，これは成功するはず
+    Class<?> clazz = Class.forName(buggyCalculator, true, loader);
 
-		assertThat(clazz.getName(), is(buggyCalculator));
-		loader.close();
-	}
+    assertThat(clazz.getName(), is(buggyCalculator));
+    loader.close();
+  }
 
-	@Test
-	public void testClassUnloadingByGC01() throws Exception {
-		MemoryClassLoader loader = new MemoryClassLoader(new URL[] { new URL("file:./" + outdir) });
+  @Test
+  public void testClassUnloadingByGC01() throws Exception {
+    MemoryClassLoader loader = new MemoryClassLoader(new URL[] {outDir.toUri().toURL()});
 
-		// まず動的ロード
-		Class<?> clazz = loader.loadClass(buggyCalculator);
+    // まず動的ロード
+    Class<?> clazz = loader.loadClass(buggyCalculator);
 
-		// 弱参照（アンロードの監視）の準備
-		final WeakReference<?> targetClassWR = new WeakReference<>(clazz);
+    // 弱参照（アンロードの監視）の準備
+    final WeakReference<?> targetClassWR = new WeakReference<>(clazz);
 
-		// まずロードされていることを確認
-		assertThat(targetClassWR.get(), is(notNullValue()));
+    // まずロードされていることを確認
+    assertThat(targetClassWR.get(), is(notNullValue()));
 
-		// ロード先への参照（インスタンス）を完全に削除
-		loader.close();
-		loader = null;
-		clazz = null;
+    // ロード先への参照（インスタンス）を完全に削除
+    loader.close();
+    loader = null;
+    clazz = null;
 
-		// GCして
-		System.gc();
+    // GCして
+    System.gc();
 
-		// アンロードされていることを確認
-		assertThat(targetClassWR.get(), is(nullValue()));
-	}
+    // アンロードされていることを確認
+    assertThat(targetClassWR.get(), is(nullValue()));
+  }
 
-	@Test
-	public void testClassUnloadingByGC02() throws Exception {
-		MemoryClassLoader loader = new MemoryClassLoader(new URL[] { new URL("file:./" + outdir) });
+  @Test
+  public void testClassUnloadingByGC02() throws Exception {
 
-		// まず動的ロード
-		Class<?> clazz = loader.loadClass(buggyCalculator);
+    MemoryClassLoader loader = new MemoryClassLoader(new URL[] {outDir.toUri().toURL()});
 
-		// 弱参照（アンロードの監視）の準備
-		final WeakReference<?> targetClassWR = new WeakReference<>(clazz);
+    // まず動的ロード
+    Class<?> clazz = loader.loadClass(buggyCalculator);
 
-		// まずロードされていることを確認
-		assertThat(targetClassWR.get(), is(notNullValue()));
+    // 弱参照（アンロードの監視）の準備
+    final WeakReference<?> targetClassWR = new WeakReference<>(clazz);
 
-		// ロード先への参照（インスタンス）を削除せずに
-		// loader.close();
-		// loader = null;
-		// clazz = null;
+    // まずロードされていることを確認
+    assertThat(targetClassWR.get(), is(notNullValue()));
 
-		// GCして
-		System.gc();
+    // ロード先への参照（インスタンス）を削除せずに
+    // loader.close();
+    // loader = null;
+    // clazz = null;
 
-		// アンロードされていないことを確認
-		assertThat(targetClassWR.get(), is(notNullValue()));
-		loader.close();
-	}
+    // GCして
+    System.gc();
 
-	@Test
-	public void testClassUnloadingByGC03() throws Exception {
-		MemoryClassLoader loader = new MemoryClassLoader(new URL[] { new URL("file:./" + outdir) });
+    // アンロードされていないことを確認
+    assertThat(targetClassWR.get(), is(notNullValue()));
+    loader.close();
+  }
 
-		// まず動的ロード
-		Class<?> clazz = loader.loadClass(buggyCalculator);
+  @Test
+  public void testClassUnloadingByGC03() throws Exception {
+    MemoryClassLoader loader = new MemoryClassLoader(new URL[] {outDir.toUri().toURL()});
 
-		// 弱参照（アンロードの監視）の準備
-		WeakReference<?> targetClassWR = new WeakReference<>(clazz);
+    // まず動的ロード
+    Class<?> clazz = loader.loadClass(buggyCalculator);
 
-		// まずロードされていることを確認
-		assertThat(targetClassWR.get(), is(notNullValue()));
+    // 弱参照（アンロードの監視）の準備
+    WeakReference<?> targetClassWR = new WeakReference<>(clazz);
 
-		// ロード先への参照（インスタンス）を完全に削除
-		loader.close();
-		loader = null;
-		clazz = null;
+    // まずロードされていることを確認
+    assertThat(targetClassWR.get(), is(notNullValue()));
 
-		// GCして
-		System.gc();
+    // ロード先への参照（インスタンス）を完全に削除
+    loader.close();
+    loader = null;
+    clazz = null;
 
-		// アンロードされていることを確認
-		assertThat(targetClassWR.get(), is(nullValue()));
+    // GCして
+    System.gc();
 
-		// もう一度ロードすると
-		loader = new MemoryClassLoader(new URL[] { new URL("file:./" + outdir) });
-		clazz = loader.loadClass(buggyCalculator);
-		targetClassWR = new WeakReference<>(clazz);
+    // アンロードされていることを確認
+    assertThat(targetClassWR.get(), is(nullValue()));
 
-		// ロードされているはず
-		assertThat(targetClassWR.get(), is(notNullValue()));
-		loader.close();
+    // もう一度ロードすると
+    loader = new MemoryClassLoader(new URL[] {outDir.toUri().toURL()});
+    clazz = loader.loadClass(buggyCalculator);
+    targetClassWR = new WeakReference<>(clazz);
 
-	}
+    // ロードされているはず
+    assertThat(targetClassWR.get(), is(notNullValue()));
+    loader.close();
 
-	@Test
-	public void testJUnitWithMemoryLoader01() throws Exception {
-		MemoryClassLoader loader = new MemoryClassLoader(new URL[] { new URL("file:./" + outdir) });
+  }
 
-		// BuggyCalculatorTest（BCTest）をロードしておく
-		Class<?> clazz = loader.loadClass(buggyCalculatorTest);
+  @Test
+  public void testJUnitWithMemoryLoader01() throws Exception {
+    MemoryClassLoader loader = new MemoryClassLoader(new URL[] {outDir.toUri().toURL()});
 
-		// テストを実行
-		// * ここでBCTestのClassLoaderには上記MemoryClassLoaderが紐づく（自身をロードしたローダーが指定される）
-		// * BCTestはBCインスタンス化のためにMemoryClassLoaderを使って（暗黙的に）BCをロードする
-		final JUnitCore junitCore = new JUnitCore();
-		final Result result = junitCore.run(clazz);
+    // BuggyCalculatorTest（BCTest）をロードしておく
+    Class<?> clazz = loader.loadClass(buggyCalculatorTest);
 
-		// きちんと実行できるはず
-		assertThat(result.getRunCount(), is(4));
-		assertThat(result.getFailureCount(), is(1));
+    // テストを実行
+    // * ここでBCTestのClassLoaderには上記MemoryClassLoaderが紐づく（自身をロードしたローダーが指定される）
+    // * BCTestはBCインスタンス化のためにMemoryClassLoaderを使って（暗黙的に）BCをロードする
+    final JUnitCore junitCore = new JUnitCore();
+    final Result result = junitCore.run(clazz);
 
-		loader.close();
-	}
+    // きちんと実行できるはず
+    assertThat(result.getRunCount(), is(4));
+    assertThat(result.getFailureCount(), is(1));
 
-	@Test
-	public void testJUnitWithMemoryLoader02() throws Exception {
-		MemoryClassLoader loader = new MemoryClassLoader(new URL[] { new URL("file:./" + outdir) });
+    loader.close();
+  }
 
-		// まず何もロードされていないはず
-		assertThat(listLoadedClasses(loader), is(empty()));
+  @Test
+  public void testJUnitWithMemoryLoader02() throws Exception {
+    MemoryClassLoader loader = new MemoryClassLoader(new URL[] {outDir.toUri().toURL()});
 
-		// テストだけをロード
-		Class<?> clazz = loader.loadClass(buggyCalculatorTest);
+    // まず何もロードされていないはず
+    assertThat(listLoadedClasses(loader), is(empty()));
 
-		// BCTestがロードされているはず
-		assertThat(listLoadedClasses(loader), hasItems(buggyCalculatorTest));
+    // テストだけをロード
+    Class<?> clazz = loader.loadClass(buggyCalculatorTest);
 
-		// テストを実行
-		// * ここでBCTestのClassLoaderには上記MemoryClassLoaderが紐づく（自身をロードしたローダーが指定される）
-		// * BCTestはBCインスタンス化のためにMemoryClassLoaderを使って（暗黙的に）BCをロードする
-		final JUnitCore junitCore = new JUnitCore();
-		junitCore.run(clazz);
+    // BCTestがロードされているはず
+    assertThat(listLoadedClasses(loader), hasItems(buggyCalculatorTest));
 
-		// 上記テストの実行により，BCTestに加えBCもロードされているはず
-		assertThat(listLoadedClasses(loader), hasItems(buggyCalculatorTest, buggyCalculator));
+    // テストを実行
+    // * ここでBCTestのClassLoaderには上記MemoryClassLoaderが紐づく（自身をロードしたローダーが指定される）
+    // * BCTestはBCインスタンス化のためにMemoryClassLoaderを使って（暗黙的に）BCをロードする
+    final JUnitCore junitCore = new JUnitCore();
+    junitCore.run(clazz);
 
-		loader.close();
-	}
+    // 上記テストの実行により，BCTestに加えBCもロードされているはず
+    assertThat(listLoadedClasses(loader), hasItems(buggyCalculatorTest, buggyCalculator));
 
-	/**
-	 * 指定クラスローダによってロードされたクラス名一覧の取得
-	 * 
-	 * @param classLoader
-	 * @return
-	 */
-	private List<String> listLoadedClasses(ClassLoader classLoader) {
-		Class<?> clClass = classLoader.getClass();
-		while (clClass != java.lang.ClassLoader.class) {
-			clClass = clClass.getSuperclass();
-		}
-		try {
-			java.lang.reflect.Field fldClasses = clClass.getDeclaredField("classes");
-			fldClasses.setAccessible(true);
+    loader.close();
+  }
 
-			@SuppressWarnings("unchecked")
-			Vector<Class<?>> classes = (Vector<Class<?>>) fldClasses.get(classLoader);
+  /**
+   * 指定クラスローダによってロードされたクラス名一覧の取得
+   * 
+   * @param classLoader
+   * @return
+   */
+  private List<String> listLoadedClasses(ClassLoader classLoader) {
+    Class<?> clClass = classLoader.getClass();
+    while (clClass != java.lang.ClassLoader.class) {
+      clClass = clClass.getSuperclass();
+    }
+    try {
+      java.lang.reflect.Field fldClasses = clClass.getDeclaredField("classes");
+      fldClasses.setAccessible(true);
 
-			return classes.stream().map(s -> s.getName()).collect(Collectors.toList());
-		} catch (SecurityException | IllegalArgumentException | NoSuchFieldException | IllegalAccessException e) {
-			e.printStackTrace();
-		}
-		return null;
-	}
+      @SuppressWarnings("unchecked")
+      Vector<Class<?>> classes = (Vector<Class<?>>) fldClasses.get(classLoader);
+
+      return classes.stream().map(s -> s.getName()).collect(Collectors.toList());
+    } catch (SecurityException | IllegalArgumentException | NoSuchFieldException
+        | IllegalAccessException e) {
+      e.printStackTrace();
+    }
+    return null;
+  }
 
 }
